--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <p><a href="./HTML2.html">link to internal file</a></p>
     <br>
     <p>Image kept inside the folder</p>
-    <img src="./download.jfif" width="400px" alt="logo image">
+    <img src="./prep.png" width="100px" height="100px" alt="logo image">
     <p>Image using absulute link</p>
-    <img src="https://media.istockphoto.com/photos/mountain-landscape-picture-id517188688?s=612x612" width="400px" height="200px" alt="imag not found">
+    <img src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,f_auto,q_auto:eco,dpr_1/uzxxllgloialmn9mhwfe" width="100px" height="100px" alt="imag not found">
 
     <h1>Lists</h1>
     <a href="./HTML2.html">click hear</a>
